...
) {
    val query by viewModel.query

    Box(modifier = modifier) {
        LazyColumn(
            modifier = modifier
                .testTag("ArtistList")
        ) {
            item {
                Header(
                    query = query,
                    onQueryChange = viewModel::searchArtists,
                    modifier = modifier
...
